Deleted JavaScript and CSS files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Number Game</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 		<h1> Number Game </h1>
@@ -18,16 +17,11 @@
 			if(question < number){
 				window.alert("Too low");
 			};
-			var question = window.prompt("I'm thinking of a number between 1 and 100, can you guess what it is? If you want to see the source code for this game, type in Source Code ");
+			var question = window.prompt("I'm thinking of a number between 1 and 100, can you guess what it is?");
 			}
 			if(question == number){
 				window.alert("You got it! Reload to play again!")
 			}
-			
-			if(question == "Source Code"){
-				document.window()
-			}
 			</script>
-    <script src="script.js"></script>
   </body>
 </html>
