--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
 		<h1> Number Game </h1>
+		<button onclick="a()"> Start Game </button> <br> <br>
+		<a href="https://github.com/impozible1/Number-Game" target="_blank"> Source Code </a>
 		<script>
+			function a(){
 			var number = Math.floor((Math.random() * 100) + 1);
 			while(question != number){
 			if(question > number){
@@ -20,8 +23,9 @@
 			var question = window.prompt("I'm thinking of a number between 1 and 100, can you guess what it is?");
 			}
 			if(question == number){
-				window.alert("You got it! Reload to play again!")
+				window.alert("You got it! Press Start Game to play again!")
 			}
+			};
 			</script>
   </body>
 </html>
