Added sans-serif fonts to elements

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Number Game</title>
   </head>
   <body>
-		<h1> Number Game </h1>
+		<h1 style="font-family:Arial, Helvetica, sans-serif"> Number Game </h1>
 		<button onclick="a()"> Start Game </button> <br> <br>
-		<a href="https://github.com/impozible1/Number-Game" target="_blank"> Source Code </a>
+		<a href="https://github.com/impozible1/Number-Game" target="_blank" style="font-family:Arial, Helvetica, sans-serif"> Source Code </a>
 		<script>
 			function a(){
 			var number = Math.floor((Math.random() * 100) + 1);
